# university-bot

./: .env  .gitignore  Dockerfile  docker-compose.yml  env.py  main.py  pyproject.toml
admin/: admin.py
database/: db.py
files/: users.xlsx
help_module/: bot_features.py
profiles/: profile.py
tasks/: tasks.py
tests_and_exams/: test_and_exam.py
utils/: translations.py  utils.py
