[tool.poetry]
name = "university-bot"
version = "0.1.0"
description = ""
authors = ["ivalukyan <ivalukyanov@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
